# distribute

./: .gitignore  CMakeLists.txt  pack.sh
headers/: functions.h  functions_vt.h  phil.h  queue.h
headers/pa1_starter_code/: ipc.h
headers/pa2345_starter_code/: banking.h  pa2345.h
src/: 1lab.c  2lab.c  4lab.c  5lab.c  bank_robbery.c  bank_robbery_vt.c  functions.c  functions_vt.c  main.c  phil.c  queue.c  test.c  vtlab.c
